SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/CPQ_Playbook_Rule_Criterion__c.object-meta.xml
<CustomObject>
    <description>Criteria to be met for Rule execution</description>
    <label>CPQ Playbook Rule Criterion</label>
    <nameField>
        <label>CPQ Playbook Rule Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Rule Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>