SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/Comparison_Operator__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Operator__c</fullName>
    <description>Method in which the Question answer should be compared to the Comparison Value</description>
    <inlineHelpText>Method in which the Question answer should be compared to the Comparison Value</inlineHelpText>
    <label>Comparison Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Does not equal</fullName>
            </value>
            <value>
                <fullName>Greater than</fullName>
            </value>
            <value>
                <fullName>Greater than or equal</fullName>
            </value>
            <value>
                <fullName>Less than</fullName>
            </value>
            <value>
                <fullName>Less than or equal</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does not contain</fullName>
            </value>
            <value>
                <fullName>Is empty</fullName>
            </value>
            <value>
                <fullName>Is not empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>