SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/Comparison_Value_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Value_Decimal__c</fullName>
    <description>If related source type is &apos;Decimal&apos;, comparison value stored here</description>
    <inlineHelpText>If related source type is &apos;Decimal&apos;, comparison value stored here</inlineHelpText>
    <label>Comparison Value (Decimal)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>