SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/Comparison_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Value_Text__c</fullName>
    <description>If related question answer type is &apos;Picklist&apos;, &apos;Multi-Select Picklist&apos;, &apos;Text&apos;, or &apos;Text Area&apos;, comparison value stored here</description>
    <inlineHelpText>If related question answer type is &apos;Picklist&apos;, &apos;Multi-Select Picklist&apos;, &apos;Text&apos;, or &apos;Text Area&apos;, comparison value stored here</inlineHelpText>
    <label>Comparison Value (Text)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>