SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/CPQ_Playbook_Rule_Criteria_Group__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Rule_Criteria_Group__c</fullName>
    <description>CPQ Playbook Rule Criteria Group in which Criterion is evaluated</description>
    <inlineHelpText>Playbook Rule Criteria Group in which Criterion is evaluated</inlineHelpText>
    <label>CPQ Playbook Rule Criteria Group</label>
    <referenceTo>CPQ_Playbook_Rule_Criteria_Group__c</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Criteria</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>