SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product2 record that will be evaluated</description>
    <inlineHelpText>Product from which Criterion gets its evaluation</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CPQ Playbook RuleCriteria</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>