SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/Product_Field__c.field-meta.xml
<CustomField>
    <fullName>Product_Field__c</fullName>
    <description>Field from Product to use for product value. For non-entitlement evaluations, the following CPQ attributes are valid: &apos;Product_Name&apos;, &apos;Start_Date&apos;, &apos;End_Date&apos;, &apos;Quantity&apos;, &apos;Discount&apos;, &apos;Unit_Price&apos;, &apos;List_Price&apos;, &apos;Sub_Total_Price&apos;, and &apos;Total_Price&apos; in addition to any QuoteLineItem Field API names in the event that CPQ is custom stamping said fields. For entitlement evaluations, any Contract_Entitlement__c Field API names are supported.</description>
    <inlineHelpText>Field from Product to use for product value. For non-entitlement evaluations, the following CPQ attributes are valid: &apos;Product_Name&apos;, &apos;Start_Date&apos;, &apos;End_Date&apos;, &apos;Quantity&apos;, &apos;Discount&apos;, &apos;Unit_Price&apos;, &apos;List_Price&apos;, &apos;Sub_Total_Price&apos;, and &apos;Total_Price&apos; in addition to any QuoteLineItem Field API names in the event that CPQ is custom stamping said fields. For entitlement evaluations, any Contract_Entitlement__c Field API names are supported.</inlineHelpText>
    <label>Product Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>