SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/Product_Is_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Product_Is_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the product will be evaluated based on how it is configured in its entitlement for the contract being replaced/renewed</description>
    <inlineHelpText>If true, the product will be evaluated based on how it is configured in its entitlement for the contract being replaced/renewed</inlineHelpText>
    <label>Product Is Entitlement</label>
    <type>Checkbox</type>
</CustomField>