SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/Record_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Lookup_Field__c</fullName>
    <description>Field API Name on record that should be accessed for the comparison value.</description>
    <inlineHelpText>Field API Name on record that should be accessed for the comparison value.</inlineHelpText>
    <label>Record Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>