SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criterion__c/fields/Target_Manual_Addition_Only__c.field-meta.xml
<CustomField>
    <fullName>Target_Manual_Addition_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, the product criterion will only be evaluated on the desired product added manually.</description>
    <inlineHelpText>If TRUE, the product criterion will only be evaluated on the desired product added manually.</inlineHelpText>
    <label>Target Manual Additon Only</label>
    <type>Checkbox</type>
</CustomField>